--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
       class="w-8 h-8 border-t-2 border-blue-500 rounded-full animate-spin mx-auto"></div>
     <div id="comic-container"></div>
   </div>
+  <script src="config.js"></script>
   <script>
     const examplePrompt = "When the bus was late to pick them up one morning, Timmy and Tommy decided to take matters into their own hands...";
     document.getElementById('example-prompt').textContent = `Click here for an example prompt: "${examplePrompt}"`;
@@ -39,7 +40,7 @@
       generateComicBtn.classList.add('cursor-not-allowed', 'opacity-50');
       generateComicBtn.disabled = true;
 
-      const response = await fetch('http://localhost:3334/generate', {
+      const response = await fetch(`${process.env.NODE_ENV === "production" ? process.env.PRODUCTION_API_URL : process.env.DEV_API_URL}/generate`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
